# research_notebook

./: .buildinfo  .dvcignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_REVIEW.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  _toc.yml  bib.html  content.html  coverage.xml  dvc.yaml  environment_jb.yml  genindex.html  intro.html  markdown.html  methane.bib  myst.yml  notebooks.html  objects.inv  pixi.toml  prf-prf.html  pyproject.toml  references.bib  release-please-config.json  requirements.txt  requirements_old.txt  search.html  searchindex.js
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md  labeler.yml
_sources/: intro.md
configs/: train.yaml
docs/: index.md
marimo_notebooks/: 01_exploration.py
notes/: IDEAS.md  (+2 more)
projects/gaussianization/: README.md  pyproject.toml  survae_flows_proof.md
projects/gaussianization/notebooks/: 01_gaussianization_2d.ipynb  02_coupling_flow_2d.ipynb  03_iterative_gaussianization_init.ipynb  04_coupling_equivalence.ipynb
projects/gaussianization/src/gaussianization/: __init__.py
projects/gaussianization/src/gaussianization/gauss_keras/: __init__.py  _math.py  ig_init.py  training.py
projects/gaussianization/src/gaussianization/gauss_keras/bijectors/: __init__.py  _householder_decomp.py  base.py  coupling.py  flow.py  marginal.py  rotation.py
projects/gaussianization/src/gaussianization/gauss_keras/mixtures/: __init__.py  gaussian.py
projects/gaussianization/tests/: test_coupling.py  test_fixed_ortho.py  test_flow.py  test_householder.py  test_householder_decomp.py  test_ig_init.py  test_marginal.py  test_math.py  test_mixture_gaussian.py
projects/methane_pod/: README.md  pyproject.toml
projects/methane_pod/notebooks/: 01_mttpp_theory.md  02_intensity_zoo.md  03_missing_mass_paradox.ipynb  03_missing_mass_paradox.py  04_intensity_gallery.ipynb  04_intensity_gallery.py  05_pod_gallery.ipynb  05_pod_gallery.py  06_stationary_numpyro_mcmc.ipynb  06_stationary_numpyro_mcmc.py  07_pod_fitting_mcmc.md  08_persistency.md
projects/methane_pod/src/methane_pod/: __init__.py  fitting.py  intensity.py  paradox.py  pod_functions.py
projects/methane_pod/tests/: test_fitting.py  test_intensity.py  test_paradox.py  test_pod_functions.py
projects/plume_simulation/: README.md  pyproject.toml
projects/plume_simulation/notebooks/: 00_gaussian_plume_derivation.md  01_gaussian_plume_forward.ipynb  01_gaussian_plume_forward.py  02_emission_rate_parameter_estimation.ipynb  02_emission_rate_parameter_estimation.py  03_plume_state_estimation.ipynb  03_plume_state_estimation.py
projects/plume_simulation/notebooks/assimilation/: 00_3dvar_derivation.md  06_3dvar_methane_retrieval.ipynb
projects/plume_simulation/notebooks/gauss_puff/: 00_gaussian_puff_derivation.md  01_gaussian_puff_forward.ipynb  02_emission_rate_parameter_estimation.ipynb  03_puff_state_estimation.ipynb
projects/plume_simulation/notebooks/hapi_lut/: 00_hapi_lut_derivation.md  01_hapi_lut_ch4.ipynb  02_hapi_lut_multigas.ipynb  03_beers_law_with_lut.ipynb
projects/plume_simulation/notebooks/les_fvm/: 00_eulerian_dispersion_derivation.md  01_eulerian_dispersion_l2.ipynb  03_puff_vs_eulerian.ipynb
projects/plume_simulation/notebooks/matched_filter/: 00_mf_derivation.md  01_mf_vs_3dvar.ipynb  02_covariance_flavours.ipynb
projects/plume_simulation/notebooks/radtran/: 04_srf_band_integration.ipynb  05_matched_filter_retrieval.ipynb
projects/plume_simulation/notes/: roadmap.md  satellites.ipynb
projects/plume_simulation/notes/roadmap/: 00_prerequisites.md  01_tier1_gaussian.md  02_tier2_lagrangian.md  03_tier3_eulerian.md  04_rtm_stack.md  05_tier4_coupled.md  06_tier5_population.md  06a_instantaneous.md  06b_point_process.md  06c_persistency.md  06d_total_emission.md  README.md
projects/plume_simulation/src/plume_simulation/: __init__.py
projects/plume_simulation/src/plume_simulation/assimilation/: __init__.py  background.py  control.py  cost.py  diagnostics.py  obs_operator.py  solve.py
projects/plume_simulation/src/plume_simulation/gauss_plume/: __init__.py  dispersion.py  inference.py  plume.py
projects/plume_simulation/src/plume_simulation/gauss_puff/: __init__.py  dispersion.py  inference.py  puff.py  turbulence.py  wind.py
projects/plume_simulation/src/plume_simulation/hapi_lut/: __init__.py  beers.py  config.py  generator.py  multi.py
projects/plume_simulation/src/plume_simulation/les_fvm/: __init__.py  _vertical_ops.py  advection.py  boundary.py  diffusion.py  dynamics.py  grid.py  simulate.py  source.py  wind.py
projects/plume_simulation/src/plume_simulation/matched_filter/: __init__.py  background.py  cluster.py  core.py  io.py  streaming.py  target.py
projects/plume_simulation/src/plume_simulation/radtran/: __init__.py  background.py  config.py  forward.py  gaussx_solve.py  instrument.py  matched_filter.py  nb_lut.py  srf.py  target.py
projects/plume_simulation/tests/: conftest.py
projects/plume_simulation/tests/assimilation/: conftest.py  test_background.py  test_control.py  test_cost.py  test_diagnostics.py  test_obs_operator.py  test_solve.py
projects/plume_simulation/tests/gauss_plume/: test_dispersion.py  test_inference.py  test_plume.py
projects/plume_simulation/tests/gauss_puff/: test_dispersion.py  test_inference.py  test_puff.py  test_turbulence.py  test_wind.py
projects/plume_simulation/tests/hapi_lut/: test_beers.py  test_config.py  test_generator.py  test_multi.py
projects/plume_simulation/tests/les_fvm/: test_advection.py  test_boundary.py  test_diffusion.py  test_grid.py  test_simulate.py  test_source.py  test_vertical_ops.py  test_wind.py
projects/plume_simulation/tests/matched_filter/: conftest.py  test_background.py  test_cluster.py  test_core.py  test_integration.py  test_io.py  test_streaming.py  test_target.py
projects/plume_simulation/tests/radtran/: conftest.py  test_background.py  test_config.py  test_forward.py  test_gaussx_solve.py  test_instrument.py  test_matched_filter.py  test_nb_lut.py  test_srf.py  test_target.py
(+896 files in other folders)
