[project]
name = "research_notebook"
version = "0.1.3"
description = "Research notebook — source code for experiments and notes."
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/research_notebook"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.5",
    "pre-commit>=3.7",
]
lint = [
    "ruff>=0.9",
]
typecheck = [
    "ty>=0.0.1a6",
]
docs = [
    "mystmd>=1.3",
    "jupytext>=1.16",
    "ipykernel>=6.29",
    "matplotlib>=3.9",
    "ghp-import>=2.1",
]

[tool.ruff]
target-version = "py312"
line-length = 88
exclude = ["notebooks/", "marimo_notebooks/"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E402", "E721", "E731", "E741", "F722"]

[tool.ruff.lint.per-file-ignores]
"notebooks/**/*.py" = ["E501", "I001", "B018"]
"marimo_notebooks/**/*.py" = ["E501", "I001", "B018"]

[tool.ruff.lint.isort]
combine-as-imports = true
lines-after-imports = 2

[tool.ty.environment]
python-version = "3.12"

[tool.ty.rules]
invalid-argument-type = "ignore"
invalid-assignment = "ignore"
invalid-method-override = "ignore"
invalid-parameter-default = "ignore"
invalid-return-type = "ignore"
unresolved-attribute = "ignore"
unresolved-import = "ignore"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/research_notebook --cov-report=term-missing --cov-report=xml:coverage.xml"
filterwarnings = ["error", "ignore::DeprecationWarning"]
xfail_strict = true

[tool.coverage.run]
source = ["src/research_notebook"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
