[project]
name = "methane_pod"
version = "0.1.0"
description = "Thinned marked temporal point processes and POD models for methane retrieval."
requires-python = ">=3.12"
dependencies = [
    "jax>=0.5",
    "jaxlib>=0.5",
    "equinox>=0.11",
    "numpyro>=0.16",
    "numpy",
    "scipy",
    "matplotlib",
    "pandas",
]

[project.optional-dependencies]
fit = ["corner", "pandas"]
dev = ["pytest>=8", "pytest-xdist>=3.5"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/methane_pod"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
markers = [
    "slow: marks tests as slow (MCMC sampling); run with -m 'not slow' to skip",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]
