[project]
name = "plume_simulation"
version = "0.1.0"
description = "Forward models for atmospheric plume dispersion (JAX + NumPyro)."
requires-python = ">=3.12"
# Core runtime deps — only what the forward model needs. The NumPyro-based
# Bayesian inference module is imported lazily; users who only want the
# xarray forward model do not pay for it. The jax/jaxlib upper bound
# mirrors the pixi `plume-simulation` feature (numpyro < 0.21 still imports
# `xla_pmap_p`, which was removed on the JAX 0.9 line).
dependencies = [
    "jax>=0.7,<0.9",
    "jaxlib>=0.7,<0.9",
    "numpy",
    "xarray",
    # scipy powers the trimmed-mean / SVD background estimators in
    # plume_simulation.radtran.background. (jax/diffrax pull scipy
    # transitively, but declaring it explicitly avoids a fragile load
    # for users who switch to an alternative jax distribution.)
    "scipy>=1.11",
    # diffrax + equinox drive the gauss_puff time-varying wind solves.
    "diffrax>=0.6",
    "equinox>=0.11",
    # finitevolx powers the Arakawa C-grid FVM operators used by the les_fvm
    # Eulerian dispersion sub-model (Advection3D, Diffusion3D, Difference3D,
    # Interpolation3D, boundary-condition atoms, and time steppers).
    "finitevolx>=0.0.41",
    # gaussx supplies the structured linear-algebra primitives used by the
    # radtran matched-filter retrieval (LowRankUpdate + gaussx.solve via
    # Woodbury identity) — keeps the full O(n_bands³) inverse off the hot
    # path for hyperspectral retrievals. gaussx is not on PyPI yet; the
    # plume-simulation pixi environment pins it to a git commit. Users
    # who install this package directly via pip need to install gaussx
    # separately (e.g. ``pip install git+https://github.com/jejjohnson/gaussx``).
    # optimistix powers the variational retrieval module
    # plume_simulation.assimilation: LBFGS, GaussNewton, LevenbergMarquardt
    # minimisers plus ImplicitAdjoint / RecursiveCheckpointAdjoint for
    # gradients through the converged 3D-Var solve. Pulls in lineax for
    # the inner linear solvers (CG, Cholesky, AutoLinearSolver), which we
    # also use directly to wire dual / PSAS solutions in solve.py.
    "optimistix>=0.0.10",
    # scikit-learn powers the matched-filter background estimators
    # (EmpiricalCovariance / LedoitWolf / OAS, TruncatedSVD for low-rank
    # covariance, GaussianMixture for cluster backgrounds). The matched
    # filter itself is pure JAX — sklearn is only used off the gradient
    # path, so we accept its numpy-first API without autodiff concerns.
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
# The `inference` submodule is the only consumer of numpyro.
inference = ["numpyro>=0.16"]
# Pulled in by the notebooks (plots, cartopy-free projections).
notebooks = ["matplotlib", "ipython"]
# The hapi_lut sub-package imports HAPI lazily — install this extra (or
# ``pixi install -e plume-simulation``) to build LUTs. Not required for
# importing plume_simulation.hapi_lut.
hapi = ["hitran-api"]
dev = ["pytest>=8", "pytest-xdist>=3.5", "numpyro>=0.16"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/plume_simulation"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
markers = [
    "slow: marks tests as slow (MCMC sampling); run with -m 'not slow' to skip",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]
